<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        tools:context="ui.LoginFragment"
        android:padding="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:padding="@dimen/margin_16"
            android:textStyle="bold"
            android:textSize="@dimen/text_22"
            android:textColor="@color/colorBlue"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/laytout"
            app:startIconDrawable="@drawable/ic_person_black_24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="@dimen/login_radius"
            app:boxCornerRadiusTopEnd="@dimen/login_radius"
            app:boxCornerRadiusBottomStart="@dimen/login_radius"
            app:boxCornerRadiusTopStart="@dimen/login_radius"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:hintTextColor="@color/tab_color"
            android:hint="@string/login"
            app:boxStrokeColor="@color/tab_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLogin"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/text_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password"
            app:counterEnabled="true"
            android:layout_marginTop="@dimen/margin_8"
            app:counterMaxLength="10"
            app:startIconDrawable="@drawable/ic_vpn_key_black"
            app:boxStrokeColor="@color/tab_color"
            app:hintTextColor="@color/tab_color"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/laytout"
            app:boxCornerRadiusBottomEnd="@dimen/login_radius"
            app:boxCornerRadiusTopEnd="@dimen/login_radius"
            app:boxCornerRadiusBottomStart="@dimen/login_radius"
            app:boxCornerRadiusTopStart="@dimen/login_radius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:textSize="@dimen/text_16"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            app:strokeColor="@color/colorBlue"
            app:strokeWidth="1dp"
            app:cornerRadius="@dimen/login_radius"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/login_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/text_22"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />


    </LinearLayout>

</layout>